# lockfile-analyzer

./: README.md  package-lock.json  pyproject.toml
.github/workflows/: lockfile-check.yml
data/: blocklist.txt  top_packages.txt
lockfile_analyzer/: differ.py  main.py  models.py  parser.py  registry.py  reporter.py
lockfile_analyzer/rules/: blocklist.py  integrity.py  lifecycle.py  secrets.py  transitive.py  typosquat.py  version.py
tests/: test_differ.py  test_registry.py
tests/fixtures/: lifecycle-malicious.json  package-lock.json
